fix alignment on homepage and add animation to nav bar

--- a/style.css
+++ b/style.css
@@ -29,10 +29,13 @@ html {
 /* top half of home page with animated pic and nav bar */
 .bg .container {
     padding-top: 0.5rem;
+    width: 100%;
+    height: 100%;
 }
 
 .container .heading {
-    margin-left: 45%;
+    margin-top: 15%;
+    margin-left: 35%;
     vertical-align: middle;
     font-family: 'Josefin Sans', sans-serif;
     text-shadow: 1px 1px 2px rgb(168, 101, 205), 0 0 1em rgb(213, 96, 224), 0 0 0.2em rgb(139, 52, 151);
@@ -42,44 +45,81 @@ html {
 }
 
 /* navigation bar for home page */
-nav {
+.container .nav {
     overflow: hidden;
-    margin-top: 5%;
-    margin-left: 45%;
+    margin-top: 15%;
+    margin-left: 35%;
     align-items: center;
     text-align: center;
     font-weight: 800;;
 }
 
-nav a {
+.nav a {
     float: center;
-    color: white;
+    color: aliceblue;
     padding: 10px 15px;
     font-stretch: semi-condensed;
     text-decoration: none;
     text-align: center;
 }
 
-nav a:hover{
+/*nav a:hover{
     color: black;
     background-color: #6191a1;
+} */
+/* credit to https://dev.to/kiranrajvjd/10-simple-navigation-bar-hover-animations-1980 */
+.nav a:after,
+.nav a:before {
+    content: "";
+    position: absolute;
+    display: block;
+    border: 0px solid transparent;
+    width: 0%;
+    height: 0%;
+    transition: all 0.5s ease;
+}
+
+.nav a:after {
+    width: 0%;
+    height: 0%;
+    top: 0;
+    left: 0;
+    border-top: 2px solid transparent;
+    border-left: 2px solid transparent;
+}
+
+.nav a:before {
+    width: 0%;
+    height: 0%;
+    right: 0;
+    bottom: 0;
+    border-bottom: 2px solid transparent;
+    border-right: 2px solid transparent;
+}
+
+.nav a:hover::after,
+.nav a:hover::before {
+    width: 100%;
+    height: 100%;
+    color: aliceblue;
 }
 
 .bg .center {
-    margin-left: 40%;
-    margin-top: 20%;
     position: absolute;
-    transform: translate(-100%, -100%);
-    width: 300px;
-    height: 300px;
+    transform: translate(0%, -80%);
+    width: 40%;
+    height: 50%;
     box-sizing: border-box;
 }
 
 /* animated image with code from MarioDesigns on https://codepen.io/MarioDesigns/pen/woJgeo */
 .floatingImage {
 	overflow: hidden;
-	width: 60%;
-    height: 60%;
+    vertical-align: bottom;
+    margin-left: 10%;
+    margin-right: 20%;
+	width: 70%;
+    height: 70%;
     box-sizing: border-box;
     border: 6px rgb(101, 68, 177);
     border-radius: 50%;
@@ -96,8 +136,7 @@ img {
 .secondHeader {
     text-align: left;
     align-items: left;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 10%;
     margin-top: 5%;
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 800;
@@ -107,8 +146,8 @@ img {
 .par {
     text-align: left;
     align-items: left;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-top: 5%;
     font-family: 'Josefin Sans', sans-serif;
 }
